--- a/themes/VTPL/css/style.css
+++ b/themes/VTPL/css/style.css
@@ -114,6 +114,13 @@ fieldset, table, pre
 {
     margin-bottom:0;
 }
+fieldset
+{
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border:1px solid #CCC;
+}
 p 
 {
     margin-top: 0px;
@@ -617,11 +624,10 @@ div.moduleTitle
 /* DetailView/EditView/ListView styles */
 .view, table.view
 {
-    margin-bottom:3px;
-    margin-top:3px;
+    margin-bottom:10px;
+    margin-top:10px;
     padding:10px 6px 12px 10px;
     padding:20px 16px 22px 30px;
-    width: 100%;
 }
 .view tr td table, 
 .view tr td table tr td
@@ -680,22 +686,27 @@ div.moduleTitle
 /* editviews */
 .edit
 {
-    padding:0 6px 12px 10px !important;
+    /*    padding:0 6px 12px 10px !important;*/
+    padding: 0 !important;
 }
 
 .edit > table
 {
     margin-bottom: 0px;
-    padding: 3px 3px 3px 10px!important;
+    /*    padding: 3px 3px 3px 10px!important;*/
+    padding: 0!important;
 }
 
 .edit h4
 {
+    font-weight: bold; 
+    margin: 0px;
     text-align: left;
-    margin-top: 0;
-    padding-top:0;
-    margin-top: 10px;
-    padding-left:0;
+    border: none;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 10px;
+    background-color: #eee;
 }
 .edit tr td
 {
@@ -709,7 +720,18 @@ div.moduleTitle
     padding: 5px 5px 5px 7px !important;
     text-align: left;
     vertical-align: top;
+    background-color: #EEEEEE;
 }
+
+.edit tr td[scope="col"]
+{
+    padding: 5px 5px 5px 7px !important;
+    text-align: left;
+    vertical-align: top;
+    background-color: #eee;
+    color: #444444;
+}
+
 .edit tr th 
 {
     padding: 5px 5px 5px 7px !important;
@@ -719,13 +741,22 @@ table#tabFormPagination td,  #tabFormPagination, #EditView > table#tabFormPagina
     border-bottom: none;
     margin-bottom: 0;
 }
-.edit tr td table, 
+.edit tr td table
+{
+    padding: 0 !important;
+    border: none;
+}
+
 .edit tr td table tr td
 {
     padding: 3px 3px 3px 0 !important;
-    padding: 0 !important;
+    border: none;
 }
+
 table.edit.view {
+    box-shadow: #ccc 0px 0px 10px;
+    -moz-box-shadow: #ccc 0px 0px 10px;
+    -webkit-box-shadow: #ccc 0px 0px 10px;
     margin-top: 0;
 }
 /* search panel on top of list views ( extends .edit .view definition ) */
@@ -3064,10 +3095,11 @@ ul.subTabs li a:link, ul.subTabs li a:visited
 #moduleList ul li
 {
     float: left;
-    margin: 0 0.15em;
+    margin: 2px 0;
     display:block;
     font-weight: bold;
-    padding:8px 6px 4px 2px;
+    padding:8px 6px 7px 2px;
+    border-left: 1px solid #cccccc;
 }
 #moduleList > ul > li
 {
@@ -3080,6 +3112,7 @@ ul.subTabs li a:link, ul.subTabs li a:visited
     padding-right: 0;
     padding-left: 0px; 
     margin-left: -2px;
+    border-left: none;
 }
 #moduleList > ul:first-child
 {
@@ -3713,13 +3746,14 @@ textarea
 /* for the main screen navigation tabs */
 #moduleList 
 {
-    background-image : url('../../../../index.php?entryPoint=getImage&imageName=tabRowBg.gif');
-    background-repeat: repeat-x;
-    border-bottom-color: #0046ad;
+        background-image : url('../../../../index.php?entryPoint=getImage&imageName=tabRowBg.png');
+        background-repeat: repeat-x;
+        border-bottom-color: #0046ad;
+        padding: 3px;
 }
 #moduleList > ul > li
 {
-    background-image:url('../../../../index.php?entryPoint=getImage&themeName=Sugar55&imageName=otherTab.gif');
+    /*    background-image:url('../../../../index.php?entryPoint=getImage&themeName=Sugar55&imageName=otherTab.gif');*/
 }
 #moduleList ul li span.currentTab a:link, 
 #moduleList ul li span.currentTab a:visited, 
@@ -3740,9 +3774,9 @@ textarea
 #moduleList ul li span.currentTabRight, 
 #moduleList ul li span.currentTab 
 {
-    background-image : url('../../../../index.php?entryPoint=getImage&imageName=currentTab.gif');
-    background-repeat: no-repeat;
-    border-bottom-color: #4e8ccf;
+    /*    background-image : url('../../../../index.php?entryPoint=getImage&imageName=currentTab.gif');
+        background-repeat: no-repeat;
+        border-bottom-color: #4e8ccf;*/
 }
 #subModuleList 
 {
@@ -4205,17 +4239,25 @@ ul.tablist li a.current:link, ul.tablist li a.current:visited, ul.tablist li a.c
 .yui-navset .yui-nav a, .yui-navset .yui-navset-top .yui-nav a
 {
     background:#DDD url('../../../../index.php?entryPoint=getImage&themeName=Sugar55&imageName=sugar-yui-sprites.png') repeat-x scroll 0 -131px;  
+    height:24px;
 }
 
 .sugar-progress-bar, .yui-navset .yui-nav .selected a, .yui-navset .yui-nav .selected a:focus, .yui-navset .yui-nav .selected a:hover
 {
-    background:#666666 url('../../../../index.php?entryPoint=getImage&themeName=Sugar55&imageName=sugar-yui-sprites.png') repeat-x scroll 0 -157px;
+    background:#cacaca url('../../../../index.php?entryPoint=getImage&themeName=Sugar55&imageName=sugar-yui-sprites.png') repeat-x scroll 0 -157px;
 
 }
 
 .yui-navset .yui-nav .selected a, .yui-navset .yui-nav .selected a em, .yui-navset .yui-nav a, .yui-navset .yui-nav a em, .yui-navset .yui-nav a, .yui-navset .yui-navset-top .yui-nav a  {
-    border-color: #ABC3D7;
+    border-color: #C3C3C3;
 }
+
+.yui-navset .yui-nav a em, .yui-navset .yui-navset-top .yui-nav a em {
+    border-width: 2px 1px 0;
+    height: 25px;
+    padding: 2px 10px;
+}
+
 
 a.sugar-tab-close, .yui-navset .yui-nav a.sugar-tab-close, .yui-navset .yui-nav .selected a.sugar-tab-close {
     background : transparent url('../../../../index.php?entryPoint=getImage&themeName=Sugar55&imageName=sugar-yui-sprites.png')  no-repeat scroll 0px -70px;
@@ -4848,4 +4890,14 @@ span.id-ff.multiple button.button.lastChild{
 
 .id-ff-remove {
     margin-top: 1px;
+}
+
+.yui-navset .yui-content, .yui-navset .yui-navset-top .yui-content  {
+    padding: 10px 20px 10px 20px;
+    -moz-border-radius: 0 0 6px 6px;
+    border-radius: 0 0 6px 6px;
+    -webkit-border-radius: 0 0 6px 6px;
+    border-width: 0 2px 2px 2px;
+    background:url(../../../../index.php?entryPoint=getImage&imageName=dp-bd.png) repeat; 
+    margin-bottom: 10px;
 }
