--- a/themes/VTPL/css/style.css
+++ b/themes/VTPL/css/style.css
@@ -4098,14 +4098,28 @@ h5.calSharedUser
 {
     color: #444444;
 }
-.monthHeader 
+.monthHeader, .monthFooter
 {
     color: #444;
-    background-color: #fff;
-    border-color: #abc3d7;
-    background-image: url('../../../../index.php?entryPoint=getImage&imageName=bg.gif');
-}
+    background-color: #ccc;
+    background-image: url(../../../../index.php?entryPoint=getImage&imageName=calendar-header-bg.gif);
+    -moz-border-radius-topright: 6px;
+    -moz-border-radius-topleft: 6px;
+    border-radius-radius-topleft: 6px;
+    border-radius-radius-topleft: 6px;
+    -webkit-border-top-left-radius: 6px;
+    -webkit-border-top-right-radius: 6px;
 
+    border: 2px solid #CCCCCC !important;
+    border-radius: 6px 6px 6px 6px;
+    box-shadow: 0 0 10px #CCCCCC;
+}
+.monthFooter{
+    float: left;
+    padding: 9px 5px 11px 3px;
+    width: 99%;
+    vertical-align: middle;
+}
 /* for subpanel tabs */
 .subpanelTabForm
 {
@@ -4348,7 +4362,7 @@ ul.clickMenu li ul.subnav li a:hover,ul.clickMenu li ul.subnav li input:hover, u
     background-color: #4e8ccf;
     border-color: #4e8ccf;
     color: #fff;
-    
+
     text-shadow: none;    
 }
 ul#globalLinksSubnav.SugarActionMenuIESub li a:hover, ul#quickCreateULSubnav.SugarActionMenuIESub li a:hover,
